--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".DoctorRegistration"></activity>
-        <activity android:name=".PatientForm"></activity>
+        <activity android:name=".DRegistration"></activity>
+        <activity android:name=".DoctorRegistration" />
+        <activity android:name=".PatientForm" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
