Added Doctor user registration page which redirects to doctor info form on success. Also set up doctor/patient choice activity to work correctly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
 
         <activity android:name=".DoctorRegistration"></activity>
         <activity android:name=".DRegistration"></activity>
-        <activity android:name=".DoctorRegistration" />
+        <activity android:name=".LoginPatient" />
         <activity android:name=".PatientForm" />
+        <activity android:name=".DoctorOrPatientt" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
