Finished the Patient form viewed by the doctor. Linked the Doctor homepage to the login page. Added scrollable view to the doctor form.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
 
         <activity android:name=".DoctorForm"></activity>
         <activity android:name=".DRegistration"></activity>
-        <activity android:name=".LoginPatient" />
-        <activity android:name=".LoginDoctor" />
-        <activity android:name=".PatientForm" />
-        <activity android:name=".DoctorOrPatient" />
+        <activity android:name=".LoginPatient"></activity>
+        <activity android:name=".LoginDoctor"></activity>
+        <activity android:name=".PatientForm"></activity>
+        <activity android:name=".DoctorOrPatient"></activity>
+        <activity android:name=".DHomePage"></activity>
+        <activity android:name=".DPatientDetails"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
