--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ before_install:
 - yes | sdkmanager "platforms;android-27"
 - yes | sdkmanager "platforms;android-28"
 before_script:
+  - chmod +x gradlew
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
