--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PrivacyPolicy"></activity>
+        <activity android:name=".DoctorConsultForm"></activity>
+        <activity android:name=".PrivacyPolicy" />
         <activity
             android:name=".PHomePage"
             android:label="Patient Home Page" />
         <activity android:name=".PatientDetails" />
         <activity android:name=".DoctorForm" />
-        <activity android:name=".DRegistration"
-            android:label = "Registration : Doctor"/>
-        <activity android:name=".LoginPatient"
-            android:label = "Patient Login"/>
-        <activity android:name=".LoginDoctor"
-            android:label = "Doctor Login"/>
+        <activity
+            android:name=".DRegistration"
+            android:label="Registration : Doctor" />
+        <activity
+            android:name=".LoginPatient"
+            android:label="Patient Login" />
+        <activity
+            android:name=".LoginDoctor"
+            android:label="Doctor Login" />
         <activity android:name=".PatientForm" />
-        <activity android:name=".DoctorOrPatient"
-            android:label = "Welcome to Redbox"></activity>
-        <activity android:name=".DHomePage"
-            android:label = "Doctor Home Page"/>
-        <activity android:name=".DPatientDetails" ></activity>
+        <activity
+            android:name=".DoctorOrPatient"
+            android:label="Welcome to Redbox" />
+        <activity
+            android:name=".DHomePage"
+            android:label="Doctor Home Page" />
+        <activity android:name=".DPatientDetails" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
