--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DoctorDetails"></activity>
-        <activity android:name=".PendingBookings" />
-        <activity android:name=".DHomePage" />
-        <activity android:name=".PatientBookings" />
-        <activity android:name=".PatientBookingHistory" />
+        <activity android:name=".PatientFragActivity"></activity>
+        <activity android:name=".DoctorFragActivity" />
         <activity android:name=".DoctorConsultForm" />
         <activity android:name=".PrivacyPolicy" />
-        <activity
-            android:name=".PHomePage"
-            android:label="Patient Home Page" />
-        <activity android:name=".PatientDetails" />
         <activity android:name=".DoctorForm" />
         <activity
             android:name=".DRegistration"
@@ -34,9 +27,6 @@
         <activity
             android:name=".DoctorOrPatient"
             android:label="Welcome to Redbox" />
-        <activity
-            android:name=".DoctorPatientList"
-            android:label="Doctor Home Page" />
         <activity android:name=".DPatientDetails" />
         <activity android:name=".SplashActivity">
             <intent-filter>
