--- a/.travis.yml
+++ b/.travis.yml
@@ -30,17 +30,23 @@ android:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
-
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
 before_install:
 - yes | sdkmanager "platforms;android-27"
 - yes | sdkmanager "platforms;android-28"
 before_script:
-  - chmod +x gradlew
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
-- ./gradlew assembleDebug
+- ./gradlew build connectedCheck
 - echo "Travis branch is $TRAVIS_BRANCH"
 - echo "Travid branch is in pull request $TRAVIS_PULL+REQUEST"
