--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,6 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
-- ./gradlew build connectedCheck
+- ./gradlew assembleDebug
 - echo "Travis branch is $TRAVIS_BRANCH"
 - echo "Travid branch is in pull request $TRAVIS_PULL+REQUEST"
