--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 before_install:
+ - chmod +x gradlew
+ - pip install --user codecov
 - yes | sdkmanager "platforms;android-27"
 - yes | sdkmanager "platforms;android-28"
 before_script:
@@ -47,6 +49,8 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
-- ./gradlew assembleDebug
+ - ./gradlew build connectedCheck --stacktrace
 - echo "Travis branch is $TRAVIS_BRANCH"
 - echo "Travid branch is in pull request $TRAVIS_PULL+REQUEST"
+after_success:
+  - codecov
