--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,56 @@
-language: php
+language: android
+jdk: oraclejdk8
+dist: trusty
 
-php:
-- 5.6
+android:
+  components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    - tools
+     - platform-tools
 
+    # The BuildTools version used by your project
+    - build-tools-26.0.2
+
+    # The SDK version used to compile your project
+    - android-22
+
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-x86-android-26
+    - sys-img-armeabi-v7a-android-22
+    - add-on
+    - extra
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+before_install:
+ - chmod +x gradlew
+ - pip install --user codecov
+- yes | sdkmanager "platforms;android-27"
+- yes | sdkmanager "platforms;android-28"
 before_script:
-- travis_retry composer self-update
-- travis_retry composer install --no-interaction --prefer-source --dev
-
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 script:
-- vendor/bin/phpunit --coverage-clover=coverage.xml
-
+ - ./gradlew build connectedCheck --stacktrace
+- echo "Travis branch is $TRAVIS_BRANCH"
+- echo "Travid branch is in pull request $TRAVIS_PULL+REQUEST"
 after_success:
-- bash <(curl -s https://codecov.io/bash)
+  - codecov
