--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,5 @@ script:
 - ./gradlew assembleDebug
 - echo "Travis branch is $TRAVIS_BRANCH"
 - echo "Travid branch is in pull request $TRAVIS_PULL+REQUEST"
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
