--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,33 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
-    repositories {
-        google()
-        jcenter()
-        
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath 'com.google.gms:google-services:4.3.5'  // Google Services plugin
-        
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:2.0.0'
+    classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+  }
+}
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+ext {
+  configCompileSdkVersion = 23
+  configTargetSdkVersion = 23
+  configBuildToolsVersion = '23.0.3'
+
+  supportVersion = '23.1.1'
+  support = [annotations: "com.android.support:support-annotations:$supportVersion",
+             appCompat  : "com.android.support:appcompat-v7:$supportVersion"]
+
+  assertJCore = 'org.assertj:assertj-core:1.7.1'
+  junit = 'junit:junit:4.12'
+
+  supportTest = [espressoCore: 'com.android.support.test.espresso:espresso-core:2.2.2',
+                 rules       : 'com.android.support.test:rules:0.5']
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        
-    }
+  repositories {
+    jcenter()
+  }
 
-    gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:deprecation"
-        }
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+  project.version = '0.1.0'
 }
