--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'  // Google Services plugin
 apply plugin: 'jacoco'
 
+jacoco {
+    toolVersion = "0.8.4"
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -27,10 +35,10 @@ android {
         }
     }
 
-}
-
-repositories {
-    jcenter()
+    productFlavors {
+        free {}
+        paid {}
+    }
 }
 
 dependencies {
@@ -58,6 +66,5 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
-
     
 }
