--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'com.google.gms:google-services:4.3.5'  // Google Services plugin
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
         
 
         // NOTE: Do not place your application dependencies here; they belong
