--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.jacocoVersion = '0.8.4'
     repositories {
         google()
         jcenter()
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'com.google.gms:google-services:4.3.5'  // Google Services plugin
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+        classpath "org.jacoco:org.jacoco.core:0.8.4"
         
 
         // NOTE: Do not place your application dependencies here; they belong
