--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity android:name=".PatientFragActivity"></activity>
         <activity android:name=".DoctorFragActivity" />
         <activity android:name=".DoctorConsultForm" />
-        <activity android:name=".PrivacyPolicy" />
         <activity android:name=".DoctorForm" />
         <activity
             android:name=".DRegistration"
@@ -45,6 +44,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DBookingDetails"/>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
