--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ php:
 - 5.6
 
 before_script:
-  -travis_retry composer self-update
-  -travis_retyr composer intsalll --no-interaction --prefer-source --dev
+- travis_retry composer self-update
+- travis_retry composer install --no-interaction --prefer-source --dev
+
 script:
-- vendor/bin/phpunit -- covearge-clover=coverage.xml
+- vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
