--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: php
-
 php:
-- 5.6
+  - 5.5
+  - 5.6
+  - 7.0
 
 before_script:
-- travis_retry composer self-update
-- travis_retry composer install --no-interaction --prefer-source --dev
+  - composer install --no-interaction
 
 script:
-- vendor/bin/phpunit 
-
-after_success:
-- bash <(curl -s https://codecov.io/bash)
+  - vendor/bin/phpunit
