--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ php:
   - 7.0
 
 before_script:
-  - composer install --no-interaction
+- travis_retry composer self-update
+- travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-  - vendor/bin/phpunit
+- vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
