--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,25 @@
 {
-    "name": "onwwward/laravel-bugherd",
-    "description": "Laravel 5 wrapper for Bugherd API",
+    "name": "codecov/codecov-php",
+    "type": "library",
     "license": "MIT",
-    "keywords": ["laravel", "lumen", "bugherd", "bug tracking"],
+    "homepage": "https://github.com/codecov/codecov-php",
+    "description": "demo repo",
+    "keywords": ["code coverage", "codecov", "coverage reports"],
     "authors": [
-      {
-        "name": "Roland Kalocsaven",
-        "email": "roland@onwwward.com"
-      }
+        {
+            "name": "codecov.io",
+            "email": "hello@codecov.io"
+        }
     ],
     "require": {
-        "beleneglorion/php-bugherd-api": "^1.0",
-        "illuminate/support": "^5.2"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.2",
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "~8.0"
     },
     "autoload": {
-      "psr-4": {
-        "Onwwward\\Bugherd\\": "src/Onwwward/Bugherd/"
-      }
-    },
-    "autoload-dev": {
-      "psr-4": {
-        "Onwwward\\Bugherd\\Tests\\": "tests/"
-      }
+        "psr-0": {
+            "Example": "src/"
+        }
     }
 }
