--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DocTypeList"></activity>
+        <activity android:name=".PatientDateTimeBooking"></activity>
+        <activity android:name=".DocTypeList" />
         <activity android:name=".PatientFragActivity" />
         <activity android:name=".DoctorFragActivity" />
         <activity android:name=".DoctorConsultForm" />
