Update .travis.yml  Conflicts: 	.travis.yml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,41 @@ dependencies {
     
 }
 
+task codeCoverageReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
+
+    group = "Reporting"
+    description = "Generate Jacoco coverage report for the jacoco build"
+
+    reports {
+        xml.enabled true
+        xml.destination file("build/reports/jacoco/report.xml")
+        html.enabled true
+        html.destination file("build/reports/jacoco/report.html")
+        csv.enabled false
+    }
+
+    def fileFilter = ['**/R.class',
+                      '**/R$*.class',
+                      '**/BuildConfig.*',
+                      '**/Manifest*.*',
+                      '**/*Test*.*',
+                      'android/**/*.*',
+                      '**/data/models/*']
+
+    //java compiled classes
+    def javaTree = fileTree(dir:  "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
+//kotlin compiled classes
+    def kotlinTree = fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug", excludes: fileFilter)
+    def mainSrc = "${project.projectDir}/src/main/java"
+
+    sourceDirectories.from ("${project.rootDir}/app/src/main/java/com/acpc/mobilepatienttracker")
+    classDirectories.from {[javaTree,kotlinTree]}
+    executionData.from fileTree(dir: "$buildDir", includes: [
+            "jacoco/testDebugUnitTest.exec",
+            "outputs/code-coverage/connected/*coverage.ec"
+    ])
+}
+
 project.afterEvaluate {
     def flavors = android.productFlavors.collect { flavor -> flavor.name }
 
@@ -88,7 +123,7 @@ project.afterEvaluate {
         // Create coverage task ex: 'jacocoTestReport<Flavor>' depending on
         // 'testFlavorDebugUnitTest - unit tests' & connectedFlavorDebugAndroidTest - integration tests.
         task "jacocoTestReport${productFlavorName.capitalize()}"(type: JacocoReport, dependsOn: [unitTestsTaskName, uiTestsTaskName]) {
-            group = "Reporting$project.buildDir"
+            group = "Reporting$project.rootDir"
             description = "Generate Jacoco coverage reports on the ${taskNameWithFlavor.capitalize()} build."
 
             reports {
@@ -100,26 +135,9 @@ project.afterEvaluate {
 
             classDirectories.from fileTree(
                     dir: "${project.buildDir}/intermediates/app_classes/${pathNameWithFlavor}",
-                    excludes: ['**/R.class',
-                               '**/R$*.class',
-                               '**/BuildConfig.class',
-                               '**/Manifest.class',
-                               '**/Manifest$*.class',
-                               '**/*$InjectAdapter.class',
-                               '**/*$ModuleAdapter.class',
-                               '**/*$ViewInjector*.class',
-                               '**/*_MembersInjector.class',
-                               '**/Dagger*Component.class',
-                               '**/Dagger*Component$Builder.class',
-                               '**/*Module_*Factory.class',
-                               '**/*$ViewInjector*.*',
-                               '**/*$ViewBinder*.*'
-                    ])
-
+                    excludes : ['**/R$*.class', '**/R*.class', '**/R.*.class'])
             def coverageSourceDirs = [
-                    "src/main/java",
-                    "src/$productFlavorName/java",
-                    "src/$buildType/java"
+                    "src/main/java"
             ]
             additionalSourceDirs.from files(coverageSourceDirs)
             sourceDirectories.from files(coverageSourceDirs)
