--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,10 @@ before_script:
   - adb shell input keyevent 82 &
 script:
 - ./gradlew check
-- ./gradlew jacocoTestReport
 - ./gradlew assembleDebug
 - echo "Travis branch is $TRAVIS_BRANCH"
 - echo "Travid branch is in pull request $TRAVIS_PULL+REQUEST"
 - ./gradlew connectedCheck
+- ./gradlew clean test jacocoTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
