--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
+    testImplementation "org.robolectric:robolectric:3.3.2"
     
 }
 
