--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,8 @@ dependencies {
     testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
     testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
     testImplementation 'org.robolectric:robolectric:4.4'
-    
+    androidTestImplementation 'androidx.test:rules:1.4.0-alpha06'
+
 }
 
 project.afterEvaluate {
