--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,8 @@ dependencies {
     testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
     testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
     testImplementation "org.robolectric:robolectric:3.3.2"
-    
+
+    implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
 }
 
 project.afterEvaluate {
