--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:3.3.2"
 
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
+    compile 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
 }
 
 project.afterEvaluate {
