--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".DBookingDetails" />
+
+        <service
+            android:name=".PushNotification">
+            android:permission="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
+
+
 
 </manifest>
