--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".DocTypeList"
             />
         <activity android:name=".PatientFragActivity" />
+        <activity android:name=".PastConsults" />
         <activity android:name=".DoctorFragActivity" />
         <activity android:name=".DoctorConsultForm" />
         <activity android:name=".DoctorForm" />
