--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,10 @@ android {
             }
         }
         unitTests.returnDefaultValues = true
-        unitTests.includeAndroidResources = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -61,6 +64,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-messaging-directboot:22.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -77,11 +83,9 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.powermock:powermock-api-mockito:1.6.6'
     testImplementation 'org.powermock:powermock-module-junit4:1.6.6'
-    testImplementation 'org.robolectric:robolectric:4.4'
-    androidTestImplementation 'androidx.test:rules:1.4.0-alpha06'
+    testImplementation "org.robolectric:robolectric:3.3.2"
 
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
-
 }
 
 project.afterEvaluate {
