--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.acpc.mobilepatienttracker">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -52,6 +53,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".DBookingDetails" />
+
+        <service
+            android:name=".PushNotification"
+            android:permission="false">
+            android:directBootAware="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
