--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.work:work-runtime:2.3.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -81,6 +82,8 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.4.0-alpha06'
 
     implementation 'com.github.jhonnyx2012:horizontal-picker:1.0.6'
+
+    implementation 'com.google.firebase:firebase-messaging'
 
 }
 
