--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".DoctorFragActivity" />
         <activity android:name=".DoctorConsultForm" />
         <activity android:name=".DoctorForm" />
+        <activity android:name=".DoctorConsultationList" />
+        <activity android:name=".ConsultationDetails" />
         <activity
             android:name=".DRegistration"
             android:label="Registration : Doctor" />
