--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConsultationHistoryDetailed"></activity>
+        <activity android:name=".ConsultationHistoryDetailed"
+            android:label="Booking Details"
+            ></activity>
         <activity
             android:name=".PatientDateTimeBooking"
             android:label="Select Date and Time of Appointment" />
@@ -21,7 +23,8 @@
         <activity android:name=".DoctorConsultForm" />
         <activity android:name=".DoctorForm" />
         <activity android:name=".DoctorConsultationList" />
-        <activity android:name=".ConsultationDetails" />
+        <activity android:name=".ConsultationDetails"
+            android:label="Consultation Details"/>
         <activity
             android:name=".DRegistration"
             android:label="Registration : Doctor" />
@@ -35,8 +38,10 @@
         <activity
             android:name=".DoctorOrPatient"
             android:label="Welcome to Redbox" />
-        <activity android:name=".DPatientDetails" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".DPatientDetails"
+            android:label="Patient Medical Information"/>
+        <activity android:name=".SplashActivity"
+            android:label="Welcome to Redbox">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
