--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,12 @@
         <activity android:name=".DocTypeList" />
         <activity android:name=".PatientFragActivity" />
         <activity android:name=".DoctorFragActivity" />
-        <activity android:name=".DoctorConsultForm" />
-        <activity android:name=".DoctorForm" />
-        <activity android:name=".DoctorConsultationList" />
+        <activity android:name=".DoctorConsultForm"
+            android:label = "Input Consultation Details"/>
+        <activity android:name=".DoctorForm"
+            android:label="Input Personal Details"/>
+        <activity android:name=".DoctorConsultationList"
+            android:label="Patient Medical History"/>
         <activity android:name=".ConsultationDetails"
             android:label="Consultation Details"/>
         <activity
@@ -34,7 +37,8 @@
         <activity
             android:name=".LoginDoctor"
             android:label="Doctor Login" />
-        <activity android:name=".PatientForm" />
+        <activity android:name=".PatientForm"
+            android:label="Input Personal Details"/>
         <activity
             android:name=".DoctorOrPatient"
             android:label="Welcome to Redbox" />
